# UNI-25-03-Proyecto-Estructuras

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: PRValidation.yml
archivosFASTA/: test_genome.fa
include/: commands.h  genoma.h  secuencia.h  sistema.h  utils.h
src/: commands.cpp  genoma.cpp  genoma.h  log.hpp  main.cpp  secuencia.cpp  secuencia.h  sistema.cpp
src/commands/: ayuda.cpp  base_remota.cpp  cargar.cpp  clear.cpp  codificar.cpp  decodificar.cpp  enmascarar.cpp  es_subsecuencia.cpp  guardar.cpp  histograma.cpp  listar_secuencias.cpp  ruta_mas_corta.cpp  salida.cpp  utils.cpp
src/include/: commands.h
